--- a/DesignerRHN/DesignerRHN-war/web/novedad.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/novedad.xhtml
@@ -10,12 +10,12 @@
         <ui:composition template="/Template.xhtml">
             <ui:define name="body">
                 <h:form>
-                    <p:panel header="Novedades" style="position: absolute; left: 260px;  height: 485px; width: 685px " >
-                        <p:panel style="position: absolute; left: 5px; top: 35px; height: 405px; width: 675px; border-radius: 10px" >
-                            <fieldset  style="  width: 180px;position: absolute; left: 5px;height: 100px;border-radius: 10px">
+                    <p:panel  id="PanelTotal" header="Novedades" style="position: absolute; width: 874px; height: 510px; text-align: left">    
+                        <p:panel style="position: absolute; left: 5px; top: 35px; height: 405px; width: 860px; border-radius: 10px" >
+                            <fieldset style="position: absolute; left: 5px;height: 101px; width: 215px; border-radius: 10px">
                                 <legend style="font-size: 10px; color: blue;width: 160px"><strong>Novedades Fijas y Ocasionales</strong></legend>
                                 <h:graphicImage value="CreandoIconosJar/IconNFYO.gif" style="position: absolute; top: 18px; left: 5px; width: 35px  ; height: 50px "/>
-                                <p:commandButton style="position: absolute; left: 45px; width: 150px;top:21px; height: 25px ;font-size: 10px" value="Por Empleado..." actionListener="#{controlNovedad.recibir('por empleado...')}" action="novedadempleado"/>
+                                <p:commandButton style="position: absolute; left: 45px; width: 170px;top:21px; height: 25px ;" value="Por Empleado..." actionListener="#{controlNovedad.recibir('por empleado...')}" action="novedadempleado"/>
                                
                                 <p:commandButton style="position: absolute;top: 50px; left: 45px; width: 170px; height: 25px ;" value="Por Concepto..." actionListener="#{controlNovedad.recibir('por Concepto...')}" action="novedadconcepto" />
                                 <p:commandButton style="position: absolute;top: 79px; left: 45px; width: 170px; height: 25px ;" value="Por Tercero..." actionListener="#{controlNovedad.recibir('por Tercero...')}" action="Impresion"/>
