--- a/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
@@ -13,6 +13,7 @@
 
                 <h:form id="form"> 
                     <f:loadBundle basename="Recursos.nominaf" var="msg" />
+                    <p:growl id="growl" showDetail="true"/>
                     <p:panel id="PanelTotal" header="#{msg['titulo']}" style=" ; position: absolute; width: 874px; height: 530px;">  
 
 
@@ -503,7 +504,7 @@
 
                                         <hr style="float: left; height: 250px; position: absolute; left: 270px; top: 0px;"/>
 
-                                        <p:commandButton value=" " id="btnBorrarLiquidacion" style="position: absolute; left: 275px; top: 5px; width: 80px; height: 80px; background-image: url(Imagenes/nom_borrar.gif);  background-repeat: no-repeat; background-size: 100% 100%; "/>
+                                        <p:commandButton value=" " id="btnBorrarLiquidacion" style="position: absolute; left: 275px; top: 5px; width: 80px; height: 80px; background-image: url(Imagenes/nom_borrar.gif);  background-repeat: no-repeat; background-size: 100% 100%;" actionListener="#{controlRemoto.validarBorradoLiquidacion()}"/>
 
                                         <p:commandButton value=" " id="btnCerrarLiquidacion" style="position: absolute; left: 275px; top: 90px; width: 80px; height: 80px; background-image: url(Imagenes/nom_cerrar.gif);  background-repeat: no-repeat; background-size: 100% 100%; " actionListener="#{controlCerrarLiquidacion.tipoLiquidacion(controlRemoto.pago)}" action="cerrarliq"/>
 
@@ -519,11 +520,25 @@
                                 <h:outputText style="position: absolute; top: 473px; left: 477px;  text-align: right; width: 365px; font-weight: bold" value="#{controlRemoto.detallesEmpresas.empresa.nombre} - Nit. #{controlRemoto.detallesEmpresas.empresa.nit}- Tel. #{controlRemoto.detallesEmpresas.telefono}"/>
 
                                 <p:dialog id="confirmarLiquidacion" header="#{msg['atencion']}" widgetVar="confirmarLiquidacion"  resizable="false" draggable="false" modal="true" height="120" width="420px"  closable="false">  
-                                    <h:graphicImage value="Imagenes/alerta.jpg" width="100" height="70" style="position: absolute; left: 10px; top: 10px;"  />
-                                    <h:outputText value="#{msg['antesdeliquidar']}" style="position: absolute; left: 100px; top: 20px; width: 280px; font-weight:bold; text-align: center" />
-                                    <h:outputText value="¿#{msg['confirmarLiquidacion']}?" style="position: absolute; left: 110px; top: 55px; width: 300px; font-weight:bold" />
-                                    <p:commandButton value="#{msg['si']}" onclick="confirmarLiquidacion.hide();" action="liquidacion" style="position: absolute; top: 80px; left: 215px " process="@this" />
-                                    <p:commandButton value="#{msg['no']}" onclick="confirmarLiquidacion.hide();" style="position: absolute; top: 80px; left: 255px" process="@this" />
+                                    <h:graphicImage value="Imagenes/alerta.jpg" width="100" height="80" style="position: absolute; left: 10px; top: 10px;"  />
+                                    <h:outputText value="#{msg['antesdeliquidar']}" style="position: absolute; left: 120px; top: 10px; width: 280px; font-weight:bold; text-align: center" />
+                                    <h:outputText value="#{msg['confirmarLiquidacion']}" style="position: absolute; left: 120px; top: 60px; width: 300px; font-weight:bold" />
+                                    <p:commandButton value="#{msg['si']}" onclick="confirmarLiquidacion.hide();" action="liquidacion" style="position: absolute; top: 80px; left: 275px " process="@this" icon="ui-icon-check" />
+                                    <p:commandButton value="#{msg['no']}" onclick="confirmarLiquidacion.hide();" style="position: absolute; top: 80px; left: 330px" process="@this" icon="ui-icon-arrowreturnthick-1-w" />
+                                </p:dialog>
+                                
+                                <p:dialog id="confirmarBorrarLiquidacion" header="#{msg['atencion']}" widgetVar="confirmarBorrarLiquidacion"  resizable="false" draggable="false" modal="true" height="100" width="420px"  closable="false">  
+                                    <h:graphicImage value="Imagenes/alerta.jpg" width="75" height="60" style="position: absolute; left: 10px; top: 15px;"  />
+                                    <h:outputText value="#{msg['msgborrarLiquidacion']}" style="position: absolute; left: 100px; top: 20px; width: 320px; font-weight:bold; " />
+                                    <p:commandButton value="#{msg['si']}" onclick="confirmarBorrarLiquidacion.hide();" actionListener="#{controlRemoto.borrarLiquidacion()}" style="position: absolute; top: 60px; left: 290px " process="@this" icon="ui-icon-check" />
+                                    <p:commandButton value="#{msg['no']}" onclick="confirmarBorrarLiquidacion.hide();" style="position: absolute; top: 60px; left: 345px" process="@this" icon="ui-icon-arrowreturnthick-1-w" />
+                                </p:dialog>
+                                
+                                <p:dialog id="confirmarBorrarLiquidacionPorFuera" header="#{msg['atencion']}" widgetVar="confirmarBorrarLiquidacionPorFuera"  resizable="false" draggable="false" modal="true" height="100" width="420px"  closable="false">  
+                                    <h:graphicImage value="Imagenes/alerta.jpg" width="75" height="60" style="position: absolute; left: 10px; top: 15px;"  />
+                                    <h:outputText value="#{msg['msgborrarLiquidacionPorFuera']}" style="position: absolute; left: 100px; top: 20px; width: 320px; font-weight:bold;" />
+                                    <p:commandButton value="#{msg['si']}" onclick="confirmarBorrarLiquidacionPorFuera.hide();" actionListener="#{controlRemoto.borrarLiquidacionPorFuera()}" style="position: absolute; top: 60px; left: 290px " process="@this" icon="ui-icon-check" />
+                                    <p:commandButton value="#{msg['no']}" onclick="confirmarBorrarLiquidacionPorFuera.hide();" style="position: absolute; top: 60px; left: 345px" process="@this" icon="ui-icon-arrowreturnthick-1-w" />
                                 </p:dialog>
                             </p:tab>  
 
