--- a/DesignerRHN/DesignerRHN-war/web/Template.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Template.xhtml
@@ -16,39 +16,43 @@
 
     <h:body onload="iniciarScrollEmpleado();
             iniciarScrollEmpleador();">
-        <div id="top"  class="top" style="background-image: url(Imagenes/fondoencabezado.png); height: 80px; background-repeat: no-repeat; background-size: 100% 100%;">
-            <ui:insert name="banner">
-            </ui:insert>
-        </div>
-        <div>
-            <div id="left">
-                <ui:insert name="left">
-                    <table width="224" border="0">
-                        <tr>
-                            <td colspan="2" align="left"><h:outputText value="Licencia de Uso a:" style="font-weight: bold"/></td>
-                        </tr>
-                        <tr>
-                            <br/>
-                            <td colspan="2" align="center"><img src="Imagenes\800141025.png" width="180" height="60" alt="Logo Empresa" style="position: relative; top: 20px"/></td>
-                        </tr>
-                        <tr>
-                            <td width="96" ><img src="#{controlTemplate.fotoUsuario}" width="110" height="130" alt="Foto Usuario" style="position: relative; top: 30px; left: 55px"/></td>
-                        </tr>
-                        <tr>
-                            <td width="118">
-                                <div style="font-weight: bold; position: relative; top: 35px; width: 224px; text-align: center; border: 2px; border-color: red;">
-                                    <h:outputText value="#{controlTemplate.nombreUsuario}"/>
-                                </div>
-                                <p:commandButton value="Cerrar Sesión" actionListener="#{controlTemplate.cerrarSession()}" style="position: relative; top: 35px; left: 50px"/>
-                            </td>
-                        </tr>
-                    </table>
-
+            <div id="top"  class="top" style="background-image: url(Imagenes/fondoencabezado.png); height: 80px; background-repeat: no-repeat; background-size: 100% 100%;">
+                <ui:insert name="banner">
                 </ui:insert>
             </div>
-            <div id="content" class="left_content">
-                <ui:insert name="body" />
+            <div>
+                <div id="left">
+                    <ui:insert name="left">
+                        <table width="224" border="0">
+                            <tr>
+                                <td colspan="2" align="left"><h:outputText value="Licencia de Uso a:" style="font-weight: bold"/></td>
+                            </tr>
+                            <tr>
+                                <br/>
+                                <td colspan="2" align="center"><img src="Imagenes\800141025.png" width="180" height="60" alt="Logo Empresa" style="position: relative; top: 20px"/></td>
+                            </tr>
+                            <tr>
+                                <h:form>
+                                <td width="96" ><img src="#{controlTemplate.fotoUsuario}" width="110" height="130" alt="Foto Usuario" style="position: relative; top: 30px; left: 55px"/></td>
+                                </h:form>
+                            </tr>
+                            <tr>
+                                <td width="118">
+                                    <h:form>
+                                    <div style="font-weight: bold; position: relative; top: 35px; width: 224px; text-align: center; border: 2px; border-color: red;">
+                                        <h:outputText value="#{controlTemplate.nombreUsuario}"/>
+                                    </div>
+                                    <p:commandButton value="Cerrar Sesión" actionListener="#{controlTemplate.cerrarSession()}" style="position: relative; top: 35px; left: 50px"/>
+                                    </h:form>
+                                </td>
+                            </tr>
+                        </table>
+
+                    </ui:insert>
+                </div>
+                <div id="content" class="left_content">
+                    <ui:insert name="body" />
+                </div>
             </div>
-        </div>
     </h:body>
 </html>
